@@ -39,7 +39,7 @@
         <logback.version>1.2.3</logback.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <r2dbc-spi.version>0.8.3.RELEASE</r2dbc-spi.version>
+        <r2dbc-spi.version>0.9.0.BUILD-SNAPSHOT</r2dbc-spi.version>
         <reactor.version>Dysprosium-SR12</reactor.version>
         <spring-boot.version>2.2.0.RELEASE</spring-boot.version>
         <mockito.version>3.5.15</mockito.version>
