@@ -3,6 +3,7 @@ R2DBC Proxy Changelog
 
 0.9.0.RELEASE
 ------------------
+* Support "io.r2dbc.spi.Parameter" in formatter
 * Remove deprecated "LifeCycleListener" and "LifeCycleExecutionListener" #80
 
 0.8.4.RELEASE
